Wrote more parsing tests and cleaned up ParseXML